objects/Offer_Task__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Name</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipName>Offer_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DELETED. Checkbox in UI is rendered on load.</description>
        <label>Task Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Completed_Date__c</fullName>
        <label>Task Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <label>Task Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                    <default>true</default>
                    <label>Purchase</label>
                </value>
                <value>
                    <fullName>Onboard</fullName>
                </value>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>Use</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Adopt</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVITIES</fullName>
                </value>
                <value>
                    <fullName>EXIT CRITERIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Contains the Tasks associated with each Stage in Customer Success Program</description>
    <label>Offer Task</label>
    <nameField>
        <displayFormat>TS-{0}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Offer_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Task_Stage__c</columns>
        <columns>Task_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Task_Checkbox__c</columns>
        <columns>Task_Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Purchase</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Task_Stage__c</field>
            <operation>equals</operation>
            <value>Purchase</value>
        </filters>
        <label>Purchase</label>
    </listViews>
</CustomObject>